src/zephyr_c/kernel/zk_work.nim


## * @brief Cancel a work item and wait for it to complete.
##
##  Same as k_work_cancel() but does not return until cancellation is complete.
##  This can be invoked by a thread after k_work_cancel() to synchronize with a
##  previous cancellation.
##
##  On return the work structure will be idle unless something submits it after
##  the cancellation was complete.
##
##  @note Be careful of caller and work queue thread relative priority.  If
##  this function sleeps it will not return until the work queue thread
##  completes the tasks that allow this thread to resume.
##
##  @note Behavior is undefined if this function is invoked on @p work from a
##  work queue running @p work.
##
##  @param work pointer to the work item.
##
##  @param sync pointer to an opaque item containing state related to the
##  pending cancellation.  The object must persist until the call returns, and
##  be accessible from both the caller thread and the work queue thread.  The
##  object must not be used for any other flush or cancel operation until this
##  one completes.  On architectures with CONFIG_KERNEL_COHERENCE the object
##  must be allocated in coherent memory.
##
##  @retval true if work was pending (call had to wait for cancellation of a
##  running handler to complete, or scheduled or submitted operations were
##  cancelled);
##  @retval false otherwise
##
proc k_work_cancel_sync*(work: ptr k_work; sync: ptr k_work_sync): bool {.
    importc: "k_work_cancel_sync", header: "kernel.h".}


## * @brief Initialize a work queue structure.
##
##  This must be invoked before starting a work queue structure for the first time.
##  It need not be invoked again on the same work queue structure.
##
##  @funcprops \isr_ok
##
##  @param queue the queue structure to be initialized.
##
proc k_work_queue_init*(queue: ptr k_work_q) {.importc: "k_work_queue_init",
    header: "kernel.h".}


## * @brief Initialize a work queue.
##
##  This configures the work queue thread and starts it running.  The function
##  should not be re-invoked on a queue.
##
##  @param queue pointer to the queue structure. It must be initialized
##         in zeroed/bss memory or with @ref k_work_queue_init before
##         use.
##
##  @param stack pointer to the work thread stack area.
##
##  @param stack_size size of the the work thread stack area, in bytes.
##
##  @param prio initial thread priority
##
##  @param cfg optional additional configuration parameters.  Pass @c
##  NULL if not required, to use the defaults documented in
##  k_work_queue_config.
##
proc k_work_queue_start*(queue: ptr k_work_q; stack: ptr k_thread_stack_t;
                        stack_size: csize_t; prio: cint;
                        cfg: ptr k_work_queue_config) {.
    importc: "k_work_queue_start", header: "kernel.h".}


## * @brief Access the thread that animates a work queue.
##
##  This is necessary to grant a work queue thread access to things the work
##  items it will process are expected to use.
##
##  @param queue pointer to the queue structure.
##
##  @return the thread associated with the work queue.
##
proc k_work_queue_thread_get*(queue: ptr k_work_q): k_tid_t {.inline,
    importc: "k_work_queue_thread_get", header: "kernel.h".}


## * @brief Wait until the work queue has drained, optionally plugging it.
##
##  This blocks submission to the work queue except when coming from queue
##  thread, and blocks the caller until no more work items are available in the
##  queue.
##
##  If @p plug is true then submission will continue to be blocked after the
##  drain operation completes until k_work_queue_unplug() is invoked.
##
##  Note that work items that are delayed are not yet associated with their
##  work queue.  They must be cancelled externally if a goal is to ensure the
##  work queue remains empty.  The @p plug feature can be used to prevent
##  delayed items from being submitted after the drain completes.
##
##  @param queue pointer to the queue structure.
##
##  @param plug if true the work queue will continue to block new submissions
##  after all items have drained.
##
##  @retval 1 if call had to wait for the drain to complete
##  @retval 0 if call did not have to wait
##  @retval negative if wait was interrupted or failed
##
proc k_work_queue_drain*(queue: ptr k_work_q; plug: bool): cint {.
    importc: "k_work_queue_drain", header: "kernel.h".}


## * @brief Release a work queue to accept new submissions.
##
##  This releases the block on new submissions placed when k_work_queue_drain()
##  is invoked with the @p plug option enabled.  If this is invoked before the
##  drain completes new items may be submitted as soon as the drain completes.
##
##  @funcprops \isr_ok
##
##  @param queue pointer to the queue structure.
##
##  @retval 0 if successfully unplugged
##  @retval -EALREADY if the work queue was not plugged.
##
proc k_work_queue_unplug*(queue: ptr k_work_q): cint {.
    importc: "k_work_queue_unplug", header: "kernel.h".}


## * @brief Initialize a delayable work structure.
##
##  This must be invoked before scheduling a delayable work structure for the
##  first time.  It need not be invoked again on the same work structure.  It
##  can be re-invoked to change the associated handler, but this must be done
##  when the work item is idle.
##
##  @funcprops \isr_ok
##
##  @param dwork the delayable work structure to be initialized.
##
##  @param handler the handler to be invoked by the work item.
##
proc k_work_init_delayable*(dwork: ptr k_work_delayable; handler: k_work_handler_t) {.
    importc: "k_work_init_delayable", header: "kernel.h".}


## *
##  @brief Get the parent delayable work structure from a work pointer.
##
##  This function is necessary when a @c k_work_handler_t function is passed to
##  k_work_schedule_for_queue() and the handler needs to access data from the
##  container of the containing `k_work_delayable`.
##
##  @param work Address passed to the work handler
##
##  @return Address of the containing @c k_work_delayable structure.
##
proc k_work_delayable_from_work*(work: ptr k_work): ptr k_work_delayable {.inline,
    importc: "k_work_delayable_from_work", header: "kernel.h".}


## * @brief Busy state flags from the delayable work item.
##
##  @funcprops \isr_ok
##
##  @note This is a live snapshot of state, which may change before the result
##  can be inspected.  Use locks where appropriate.
##
##  @param dwork pointer to the delayable work item.
##
##  @return a mask of flags K_WORK_DELAYED, K_WORK_QUEUED, K_WORK_RUNNING, and
##  K_WORK_CANCELING.  A zero return value indicates the work item appears to
##  be idle.
##
proc k_work_delayable_busy_get*(dwork: ptr k_work_delayable): cint {.
    importc: "k_work_delayable_busy_get", header: "kernel.h".}


## * @brief Test whether a delayed work item is currently pending.
##
##  Wrapper to determine whether a delayed work item is in a non-idle state.
##
##  @note This is a live snapshot of state, which may change before the result
##  can be inspected.  Use locks where appropriate.
##
##  @funcprops \isr_ok
##
##  @param dwork pointer to the delayable work item.
##
##  @return true if and only if k_work_delayable_busy_get() returns a non-zero
##  value.
##
proc k_work_delayable_is_pending*(dwork: ptr k_work_delayable): bool {.inline,
    importc: "k_work_delayable_is_pending", header: "kernel.h".}


## * @brief Get the absolute tick count at which a scheduled delayable work
##  will be submitted.
##
##  @note This is a live snapshot of state, which may change before the result
##  can be inspected.  Use locks where appropriate.
##
##  @funcprops \isr_ok
##
##  @param dwork pointer to the delayable work item.
##
##  @return the tick count when the timer that will schedule the work item will
##  expire, or the current tick count if the work is not scheduled.
##
proc k_work_delayable_expires_get*(dwork: ptr k_work_delayable): k_ticks_t {.
    inline, importc: "k_work_delayable_expires_get", header: "kernel.h".}


## * @brief Get the number of ticks until a scheduled delayable work will be
##  submitted.
##
##  @note This is a live snapshot of state, which may change before the result
##  can be inspected.  Use locks where appropriate.
##
##  @funcprops \isr_ok
##
##  @param dwork pointer to the delayable work item.
##
##  @return the number of ticks until the timer that will schedule the work
##  item will expire, or zero if the item is not scheduled.
##
proc k_work_delayable_remaining_get*(dwork: ptr k_work_delayable): k_ticks_t {.
    inline, importc: "k_work_delayable_remaining_get", header: "kernel.h".}


## * @brief Submit an idle work item to a queue after a delay.
##
##  Unlike k_work_reschedule_for_queue() this is a no-op if the work item is
##  already scheduled or submitted, even if @p delay is @c K_NO_WAIT.
##
##  @funcprops \isr_ok
##
##  @param queue the queue on which the work item should be submitted after the
##  delay.
##
##  @param dwork pointer to the delayable work item.
##
##  @param delay the time to wait before submitting the work item.  If @c
##  K_NO_WAIT and the work is not pending this is equivalent to
##  k_work_submit_to_queue().
##
##  @retval 0 if work was already scheduled or submitted.
##  @retval 1 if work has been scheduled.
##  @retval -EBUSY if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##  @retval -EINVAL if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##  @retval -ENODEV if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##
proc k_work_schedule_for_queue*(queue: ptr k_work_q; dwork: ptr k_work_delayable;
                                delay: k_timeout_t): cint {.
    importc: "k_work_schedule_for_queue", header: "kernel.h".}


## * @brief Submit an idle work item to the system work queue after a
##  delay.
##
##  This is a thin wrapper around k_work_schedule_for_queue(), with all the API
##  characteristcs of that function.
##
##  @param dwork pointer to the delayable work item.
##
##  @param delay the time to wait before submitting the work item.  If @c
##  K_NO_WAIT this is equivalent to k_work_submit_to_queue().
##
##  @return as with k_work_schedule_for_queue().
##
proc k_work_schedule*(dwork: ptr k_work_delayable; delay: k_timeout_t): cint {.
    importc: "k_work_schedule", header: "kernel.h".}

